docs/original_moodle/entregas/todas/3/Segundo Previo/CARRERO CASTRO - 1151935 KEVIN ANDRES 2563/2019-11-05-09-21-28.ceg/compilation.txt
Restaurante.java:31: error: ';' expected
       return Fruta fruta [] = new Fruta[];
                   ^
Restaurante.java:31: error: not a statement
       return Fruta fruta [] = new Fruta[];
                          ^
Restaurante.java:31: error: ';' expected
       return Fruta fruta [] = new Fruta[];
                            ^
Restaurante.java:31: error: not a statement
       return Fruta fruta [] = new Fruta[];
                                        ^
4 errors
Not compiled
